# hand_rust1

./: Cargo.toml  HandTracking.py  idk.txt  requirements.txt  useful_things.txt
src/: main.rs  servo.rs
