[package]
name = "rust_hand"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
panic-halt = "0.2.0"
avr-device = "0.3"

[dependencies.arduino-hal]
git ="https://github.com/Rahix/avr-hal"
rev = "46fbe4f"
features = ["arduino-uno"]

[dependencies.avr-hal-generic]
git = "https://github.com/Rahix/avr-hal"
rev = "46fbe4f"

[dependencies.atmega-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "46fbe4f"
features = ["atmega328p"]
